US-0000013: Updated Apple Watch Apex Class Testing

--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -8,6 +8,9 @@ Public with sharing Class AppleWatch{
         t.WhatId      = opp.Id;
         insert t;
      /*Comment1*/  
+     /*Comment2*/
+     /*Comment3*/
+     /*Final Comment*/
    }
   }
  }
