US-0000025: Deploy Updated Test Class API

--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -11,6 +11,8 @@ Public with sharing Class AppleWatch{
      /*Comment2*/
      /*Comment3*/
      /*Final Comment*/
+     /*Final Comment 2*/
+     /*Final Comment 3*/
    }
   }
  }
