US-0000027: Apple Watch API Change 2

--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -11,6 +11,12 @@ Public with sharing Class AppleWatch{
      /*Comment2*/
      /*Comment3*/
      /*Final Comment*/
+     /*Final Comment 2*/
+     /*Final Comment 3*/
+     
+     /*Changed the api in UAT from 47.0 to 46.0*/
+     /*The api in Dev2 is still 47.0*/
+     
    }
   }
  }
