--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -13,6 +13,7 @@ Public with sharing Class AppleWatch{
      /*Updated Comment1*/
       /*Updated Comment2*/
        /*Updated Comment3*/
+       /*Testing a new change*/
      /*Final Comment*/
      /*Final Comment 2*/
      /*Final Comment 3*/
